# graduated_dashboard

./: .gitignore  README.md  pyproject.toml
dashapp/: ThailandProvincesLocation.csv  api.py  app.py  callbacks.py  layout.py
dashapp/callbacks/: api.py  callbacks.py
dashapp/components/: footer.py  navbar.py
dashapp/pages/: about.py  home.py  homepage.py  layout.py
